--- a/Project/Config/DefaultEngine.ini
+++ b/Project/Config/DefaultEngine.ini
@@ -7,8 +7,8 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/BattleGroundMap.BattleGroundMap
-GameDefaultMap=/Game/Maps/BattleGroundMap.BattleGroundMap
+EditorStartupMap=/Game/Maps/BattleGroundLevel.BattleGroundLevel
+GameDefaultMap=/Game/Maps/BattleGroundLevel.BattleGroundLevel
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
