--- a/Project/Config/DefaultEngine.ini
+++ b/Project/Config/DefaultEngine.ini
@@ -7,8 +7,8 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/BattleGroundLevel.BattleGroundLevel
-GameDefaultMap=/Game/Maps/BattleGroundLevel.BattleGroundLevel
+EditorStartupMap=/Game/Level/MainMenuLevel.MainMenuLevel
+GameDefaultMap=/Game/Level/MainMenuLevel.MainMenuLevel
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
